# The-Source-Code

./: .gitignore  .gitignore'  README.md
DSAProblemSolving/src/: MaximumSubarray.java  Palindrome.java  ReverseString_Problem.java  TwoSum_Problem.java
Python World/Advance Concepts/Context Manager/: Script.py
Python World/Advance Concepts/Context Manager/Test_files/: file.txt
Python World/External_Packages/Django Package/myfirstproject/: db.sqlite3
Python World/External_Packages/Django Package/myfirstproject/blog/: models.py  urls.py  views.py
Python World/External_Packages/Pytest Package/Test_Code/: .coverage  calculator.py  test_calculator.py
Python World/External_Packages/Requests Package/: Note.md  Script.py
Python World/Projects/Perplexity_Project/: output.md  pyproject.toml
Python World/Projects/Perplexity_Project/src/: gemini_project.py  main.py  ok_google.py  open_apps_and_website.py  voice_module_practice.py
Python World/Projects/Twitter(x) Api Project/: Script.py  test_script.py
Python World/Python Basics/Args and Kwargs/: Note.md  script.py
Python World/Python Basics/Data Types and Variables/: script.py
Python World/Python Basics/Data Types and Variables/List_Data_Type/: script.py
Python World/Python Basics/First_Python_Program/: Script.py
Python World/Python Basics/How_Basic_Import_Works/: file.py  script.py
Python World/Python Basics/OOPS/: Class_And_Objects.py  Tasks_Class.py
Python World/Python_Playwright/: Script.py
Python World/Twitter(x) Api Project/: Script.py
(+14 files in other folders)
